# PythonAIPresintation

./: README.md  explainer.py  pyproject.toml  run.py
Client/: client.py  readme
Explainer/: explainer.py  readme
db/: chinook.db  orm.py  setup_db.py  uploads.db
slides_explain/: cli.py  main.py  utils.py
test/: readme  test_slides_explain.py
web_API/: app.py  readme
