[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AI2"
version = "0.1.0"
description = "You can use AI to explain a PPTX file and store it in a JSON file."
authors = ["Laith Khater <leth123khater@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-pptx = "^0.6.19"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.14.0"
